Button wrap and margin correction

--- a/src/app/pages/projects/first/tasklist/tasklist.component.scss
+++ b/src/app/pages/projects/first/tasklist/tasklist.component.scss
@@ -85,3 +85,8 @@ div
     }
   }
 }
+
+button{
+  white-space:normal !important;
+  line-height:115%;
+}
